[metadata]
name = db_match
version = 0.0.1
author = William Spear
author_email = spearw@gmail.com
description = For matching species databases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spearw/db_match
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True