[metadata]
name = phylo-match
version = 0.0.3
author = William Spear
author_email = spearw@gmail.com
description = For matching species databases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spearw/phylo-match
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    PyQt6
    requests
    wikipedia
    levenshtein

[options.entry_points]
console_scripts =
    phylo-match = src.python.gui:main