[metadata]
name = phylo-match
version = 0.1.2
author = William Spear
author_email = spearw@gmail.com
description = For matching species databases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spearw/phylo-match
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    diskcache
    PyQt6
    requests
    wikipedia
    levenshtein

[options.entry_points]
console_scripts =
    phylo-match = phylo_match.gui:main